# Quarter-02

./: .gitignore  04_Assignment.ipynb  04_Assignment_again.ipynb  05_Assignment.ipynb  06_Assignment.ipynb  Langchain_Project_no_1_Prompt_templatesipynb.ipynb  Langchain_project_01.ipynb  Langchain_project_no_1.ipynb  README.md  Rag_Project.ipynb  Tool_Calling_with_Gemini_2_0.ipynb
00_Assignments/: 01_Assignment.md  02_Assignment.md  03_Assignment.ipynb  06_Assignment.ipynb  README.md
Custom Translator Gpt/: .env  app.py  requirements.txt
Panaversity_Query_Assistant/: 08_Assignment.py  README.md  requirements.txt
Tool_calling_streamlit/: README.md  Streamlit_Tool_Calling.py  requirements.txt
Wheather_Gpt/: Assignment_09.py  requirements.txt
uv-assignment/: pyproject.toml
uv-assignment/src/uv_assignment/: .env  __init__.py  gemini.py  hello.py
wheather2_gpt/: app.py  requirements.txt
wheather_Gpt./: app.py  requiremnets.txt
