[project]
name = "uv-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khurramshahzad175", email = "khurramshahzad2440@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.12",
]

[project.scripts]
uv-assignment = "uv_assignment:main"
greet = "uv_assignment.hello:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
